external-crates/move/move-compiler/tests/move_2024/typing/const_in_const_circular.exp
error[E08001]: cannot compute constant value
  ┌─ tests/move_2024/typing/const_in_const_circular.move:3:11
  │
3 │     const C0: u64 = C1 + 1;
  │           ^^ Constant involved in constant cycle

error[E08001]: cannot compute constant value
  ┌─ tests/move_2024/typing/const_in_const_circular.move:4:11
  │
4 │     const C1: u64 = C2 + 1;
  │           ^^ Constant involved in constant cycle

error[E08001]: cannot compute constant value
  ┌─ tests/move_2024/typing/const_in_const_circular.move:5:11
  │
5 │     const C2: u64 = C0 + 1;
  │           ^^ Constant involved in constant cycle

error[E08001]: cannot compute constant value
  ┌─ tests/move_2024/typing/const_in_const_circular.move:6:11
  │
6 │     const C3: u64 = C1 + 1;
  │           ^^ Constant involved in constant cycle

error[E08001]: cannot compute constant value
  ┌─ tests/move_2024/typing/const_in_const_circular.move:8:11
  │
8 │     const C5: u64 = C1 + C4;
  │           ^^ Constant involved in constant cycle

